--- a/assets/assets/minecraft/optifine/cit/jacket_smi/jacket_smi_armor_l.properties
+++ b/assets/assets/minecraft/optifine/cit/jacket_smi/jacket_smi_armor_l.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=leather_chestplate
 texture=jacket_smi2
+
+texture.chainmail_layer_1=jacket_smi2
+texture.gold_layer_1=jacket_smi2
+texture.iron_layer_1=jacket_smi2
+texture.diamond_layer_1=jacket_smi2
+texture.netherite_layer_1=jacket_smi2
+texture.leather_layer_1=jacket_smi2
 nbt.CustomModelData=526
