--- a/assets/assets/minecraft/optifine/cit/kigurusi_set/kigurusi.properties
+++ b/assets/assets/minecraft/optifine/cit/kigurusi_set/kigurusi.properties
@@ -1,5 +1,12 @@
 type=armor
 matchItems=leather_leggings chainmail_leggings iron_leggings diamond_leggings golden_leggings netherite_leggings
 texture=layer_2
+
+texture.chainmail_layer_2=layer_2
+texture.gold_layer_2=layer_2
+texture.iron_layer_2=layer_2
+texture.diamond_layer_2=layer_2
+texture.netherite_layer_2=layer_2
+texture.leather_layer_2=layer_2
 nbt.display.Name=ipattern:\u041a\u0438\u0433\u0443\u0440\u0443\u0441\u0438
 #Кигуруси
