--- a/assets/assets/minecraft/optifine/cit/kigurusi_set/kigurusi_b.properties
+++ b/assets/assets/minecraft/optifine/cit/kigurusi_set/kigurusi_b.properties
@@ -1,5 +1,12 @@
 type=armor
 matchItems=leather_chestplate chainmail_chestplate iron_chestplate diamond_chestplate golden_chestplate netherite_chestplate
 texture=layer_1
+
+texture.chainmail_layer_1=layer_1
+texture.gold_layer_1=layer_1
+texture.iron_layer_1=layer_1
+texture.diamond_layer_1=layer_1
+texture.netherite_layer_1=layer_1
+texture.leather_layer_1=layer_1
 nbt.display.Name=ipattern:\u041a\u0438\u0433\u0443\u0440\u0443\u0441\u0438
 #Кигуруси
