--- a/assets/assets/minecraft/optifine/cit/mage_set/mage_dark.properties
+++ b/assets/assets/minecraft/optifine/cit/mage_set/mage_dark.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=leather_leggings chainmail_leggings iron_leggings diamond_leggings golden_leggings netherite_leggings
 texture=mage_p
+
+texture.chainmail_layer_2=mage_p
+texture.gold_layer_2=mage_p
+texture.iron_layer_2=mage_p
+texture.diamond_layer_2=mage_p
+texture.netherite_layer_2=mage_p
+texture.leather_layer_2=mage_p
 nbt.display.Name=ipattern:\u041f\u043e\u043d\u043e\u0436\u0438 \u043c\u0430\u0433\u0430
