--- a/assets/assets/minecraft/optifine/cit/mage_set/mage_dark_2_b.properties
+++ b/assets/assets/minecraft/optifine/cit/mage_set/mage_dark_2_b.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=leather_chestplate chainmail_chestplate iron_chestplate diamond_chestplate golden_chestplate netherite_chestplate
 texture=mage_a
+
+texture.chainmail_layer_1=mage_a
+texture.gold_layer_1=mage_a
+texture.iron_layer_1=mage_a
+texture.diamond_layer_1=mage_a
+texture.netherite_layer_1=mage_a
+texture.leather_layer_1=mage_a
 nbt.display.Name=ipattern:\u041d\u0430\u0433\u0440\u0443\u0434\u043d\u0438\u043a \u043c\u0430\u0433\u0430
