--- a/assets/assets/minecraft/optifine/cit/mage_set/mage_dark_2_h.properties
+++ b/assets/assets/minecraft/optifine/cit/mage_set/mage_dark_2_h.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=leather_helmet chainmail_helmet iron_helmet diamond_helmet golden_helmet netherite_helmet
 texture=mage_a
+
+texture.chainmail_layer_1=mage_a
+texture.gold_layer_1=mage_a
+texture.iron_layer_1=mage_a
+texture.diamond_layer_1=mage_a
+texture.netherite_layer_1=mage_a
+texture.leather_layer_1=mage_a
 nbt.display.Name=ipattern:\u0428\u043b\u0435\u043c \u043c\u0430\u0433\u0430
