--- a/assets/assets/minecraft/optifine/cit/mage_summoner_set/mage_dark_2_b.properties
+++ b/assets/assets/minecraft/optifine/cit/mage_summoner_set/mage_dark_2_b.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=leather_chestplate chainmail_chestplate iron_chestplate diamond_chestplate golden_chestplate netherite_chestplate
 texture=mage_dark_2
+
+texture.chainmail_layer_1=mage_dark_2
+texture.gold_layer_1=mage_dark_2
+texture.iron_layer_1=mage_dark_2
+texture.diamond_layer_1=mage_dark_2
+texture.netherite_layer_1=mage_dark_2
+texture.leather_layer_1=mage_dark_2
 nbt.display.Name=ipattern:\u041d\u0430\u0433\u0440\u0443\u0434\u043d\u0438\u043a \u043f\u0440\u0438\u0437\u044b\u0432\u0430\u0442\u0435\u043b\u044f
