--- a/assets/assets/minecraft/optifine/cit/mage_summoner_set/mage_dark_2_n.properties
+++ b/assets/assets/minecraft/optifine/cit/mage_summoner_set/mage_dark_2_n.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=leather_boots chainmail_boots iron_boots diamond_boots golden_boots netherite_boots
 texture=mage_dark_2
+
+texture.chainmail_layer_1=mage_dark_2
+texture.gold_layer_1=mage_dark_2
+texture.iron_layer_1=mage_dark_2
+texture.diamond_layer_1=mage_dark_2
+texture.netherite_layer_1=mage_dark_2
+texture.leather_layer_1=mage_dark_2
 nbt.display.Name=ipattern:\u0411\u043e\u0442\u0438\u043d\u043a\u0438 \u043f\u0440\u0438\u0437\u044b\u0432\u0430\u0442\u0435\u043b\u044f
