--- a/assets/assets/minecraft/optifine/cit/medieval_armor/armor_3/leggings.properties
+++ b/assets/assets/minecraft/optifine/cit/medieval_armor/armor_3/leggings.properties
@@ -3,5 +3,12 @@ matchItems=chainmail_leggings golden_leggings iron_leggings diamond_leggings net
 
 texture=layer_2
 
+texture.chainmail_layer_2=layer_2
+texture.gold_layer_2=layer_2
+texture.iron_layer_2=layer_2
+texture.diamond_layer_2=layer_2
+texture.netherite_layer_2=layer_2
+texture.leather_layer_2=layer_2
+
 nbt.display.Name=ipattern:\u041a\u043e\u0440\u043e\u043b\u0435\u0432\u0441\u043a\u0438\u0435 \u041f\u043e\u043d\u043e\u0436\u0438
 #Королевские
