--- a/assets/assets/minecraft/optifine/cit/medieval_armor/armor_4/leggings.properties
+++ b/assets/assets/minecraft/optifine/cit/medieval_armor/armor_4/leggings.properties
@@ -3,4 +3,11 @@ matchItems=chainmail_leggings golden_leggings iron_leggings diamond_leggings net
 
 texture=layer_2
 
+texture.chainmail_layer_2=layer_2
+texture.gold_layer_2=layer_2
+texture.iron_layer_2=layer_2
+texture.diamond_layer_2=layer_2
+texture.netherite_layer_2=layer_2
+texture.leather_layer_2=layer_2
+
 nbt.display.Name=ipattern:\u0410\u0434\u0441\u043a\u0438\u0435 \u0434\u043e\u0441\u043f\u0435\u0445\u0438
