--- a/assets/assets/minecraft/optifine/cit/medieval_armor/armor_5/helmet.properties
+++ b/assets/assets/minecraft/optifine/cit/medieval_armor/armor_5/helmet.properties
@@ -3,4 +3,11 @@ matchItems=chainmail_helmet golden_helmet iron_helmet diamond_helmet netherite_h
 
 texture=layer_1
 
+texture.chainmail_layer_1=layer_1
+texture.gold_layer_1=layer_1
+texture.iron_layer_1=layer_1
+texture.diamond_layer_1=layer_1
+texture.netherite_layer_1=layer_1
+texture.leather_layer_1=layer_1
+
 nbt.display.Name=ipattern:\u0428\u043b\u0435\u043c R
