--- a/assets/assets/minecraft/optifine/cit/medieval_armor/armor_7/boots.properties
+++ b/assets/assets/minecraft/optifine/cit/medieval_armor/armor_7/boots.properties
@@ -3,4 +3,11 @@ matchItems=chainmail_boots golden_boots iron_boots diamond_boots netherite_boots
 
 texture=layer_1
 
+texture.chainmail_layer_1=layer_1
+texture.gold_layer_1=layer_1
+texture.iron_layer_1=layer_1
+texture.diamond_layer_1=layer_1
+texture.netherite_layer_1=layer_1
+texture.leather_layer_1=layer_1
+
 nbt.display.Name=ipattern:\u0411\u043e\u0442\u0438\u043d\u043a\u0438 \u043b\u0443\u043d\u043d\u043e\u0433\u043e \u0440\u044b\u0446\u0430\u0440\u044f
