--- a/assets/assets/minecraft/optifine/cit/medieval_armor/armor_7/leggings.properties
+++ b/assets/assets/minecraft/optifine/cit/medieval_armor/armor_7/leggings.properties
@@ -3,4 +3,11 @@ matchItems=chainmail_leggings golden_leggings iron_leggings diamond_leggings net
 
 texture=layer_2
 
+texture.chainmail_layer_2=layer_2
+texture.gold_layer_2=layer_2
+texture.iron_layer_2=layer_2
+texture.diamond_layer_2=layer_2
+texture.netherite_layer_2=layer_2
+texture.leather_layer_2=layer_2
+
 nbt.display.Name=ipattern:\u041f\u043e\u043d\u043e\u0436\u0438 \u043b\u0443\u043d\u043d\u043e\u0433\u043e \u0440\u044b\u0446\u0430\u0440\u044f
