--- a/assets/assets/minecraft/optifine/cit/medieval_armor/assasin_2/boots.properties
+++ b/assets/assets/minecraft/optifine/cit/medieval_armor/assasin_2/boots.properties
@@ -3,5 +3,12 @@ matchItems=chainmail_boots golden_boots iron_boots diamond_boots netherite_boots
 
 texture=layer_1
 
+texture.chainmail_layer_1=layer_1
+texture.gold_layer_1=layer_1
+texture.iron_layer_1=layer_1
+texture.diamond_layer_1=layer_1
+texture.netherite_layer_1=layer_1
+texture.leather_layer_1=layer_1
+
 nbt.display.Name=ipattern:\u0411\u043e\u0442\u0438\u043d\u043a\u0438 \u042d\u0446\u0438\u043e
 #Эцио
