--- a/assets/assets/minecraft/optifine/cit/nano/nano_helmet.properties
+++ b/assets/assets/minecraft/optifine/cit/nano/nano_helmet.properties
@@ -3,4 +3,11 @@ matchItems=chainmail_helmet golden_helmet iron_helmet diamond_helmet netherite_h
 
 texture=nano_1
 
+texture.chainmail_layer_1=nano_1
+texture.gold_layer_1=nano_1
+texture.iron_layer_1=nano_1
+texture.diamond_layer_1=nano_1
+texture.netherite_layer_1=nano_1
+texture.leather_layer_1=nano_1
+
 nbt.display.Name=ipattern:\u041d\u0430\u043d\u043e \u0448\u043b\u0435\u043c
