--- a/assets/assets/minecraft/optifine/cit/nano_up/nano_chestplate.properties
+++ b/assets/assets/minecraft/optifine/cit/nano_up/nano_chestplate.properties
@@ -3,4 +3,11 @@ matchItems=chainmail_chestplate golden_chestplate iron_chestplate diamond_chestp
 
 texture=advancednanochestplate
 
+texture.chainmail_layer_1=advancednanochestplate
+texture.gold_layer_1=advancednanochestplate
+texture.iron_layer_1=advancednanochestplate
+texture.diamond_layer_1=advancednanochestplate
+texture.netherite_layer_1=advancednanochestplate
+texture.leather_layer_1=advancednanochestplate
+
 nbt.display.Name=ipattern:\u0423\u043b\u0443\u0447\u0448\u0435\u043d\u043d\u044b\u0439 \u043d\u0430\u043d\u043e \u0436\u0438\u043b\u0435\u0442
