--- a/assets/assets/minecraft/optifine/cit/paladin_set/paladin_b.properties
+++ b/assets/assets/minecraft/optifine/cit/paladin_set/paladin_b.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=leather_chestplate chainmail_chestplate iron_chestplate diamond_chestplate golden_chestplate netherite_chestplate
 texture=wow_paladim_2
+
+texture.chainmail_layer_1=wow_paladim_2
+texture.gold_layer_1=wow_paladim_2
+texture.iron_layer_1=wow_paladim_2
+texture.diamond_layer_1=wow_paladim_2
+texture.netherite_layer_1=wow_paladim_2
+texture.leather_layer_1=wow_paladim_2
 nbt.display.Name=ipattern:\u043d\u0430\u0433\u0440\u0443\u0434\u043d\u0438\u043a \u043f\u0430\u043b\u0430\u0434\u0438\u043d\u0430
