--- a/assets/assets/minecraft/optifine/cit/paladin_set/paladin_h.properties
+++ b/assets/assets/minecraft/optifine/cit/paladin_set/paladin_h.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=leather_helmet chainmail_helmet iron_helmet diamond_helmet golden_helmet netherite_helmet
 texture=wow_paladim_2
+
+texture.chainmail_layer_1=wow_paladim_2
+texture.gold_layer_1=wow_paladim_2
+texture.iron_layer_1=wow_paladim_2
+texture.diamond_layer_1=wow_paladim_2
+texture.netherite_layer_1=wow_paladim_2
+texture.leather_layer_1=wow_paladim_2
 nbt.display.Name=ipattern:\u0428\u043b\u0435\u043c \u043f\u0430\u043b\u0430\u0434\u0438\u043d\u0430
