--- a/assets/assets/minecraft/optifine/cit/paladin_set/paladin_l.properties
+++ b/assets/assets/minecraft/optifine/cit/paladin_set/paladin_l.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=leather_leggings chainmail_leggings iron_leggings diamond_leggings golden_leggings netherite_leggings
 texture=wow_paladim_1
+
+texture.chainmail_layer_2=wow_paladim_1
+texture.gold_layer_2=wow_paladim_1
+texture.iron_layer_2=wow_paladim_1
+texture.diamond_layer_2=wow_paladim_1
+texture.netherite_layer_2=wow_paladim_1
+texture.leather_layer_2=wow_paladim_1
 nbt.display.Name=ipattern:\u041f\u043e\u043d\u043e\u0436\u0438 \u043f\u0430\u043b\u0430\u0434\u0438\u043d\u0430
