--- a/assets/assets/minecraft/optifine/cit/police_uniform/bulletproof.properties
+++ b/assets/assets/minecraft/optifine/cit/police_uniform/bulletproof.properties
@@ -3,4 +3,11 @@ matchItems=chainmail_chestplate golden_chestplate iron_chestplate diamond_chestp
 
 texture=bulletproof
 
+texture.chainmail_layer_1=bulletproof
+texture.gold_layer_1=bulletproof
+texture.iron_layer_1=bulletproof
+texture.diamond_layer_1=bulletproof
+texture.netherite_layer_1=bulletproof
+texture.leather_layer_1=bulletproof
+
 nbt.display.Name=ipattern:\u0411\u0440\u043e\u043d\u0438\u0436\u0435\u043b\u0435\u0442
