--- a/assets/assets/minecraft/optifine/cit/police_uniform/fbi_chestplate.properties
+++ b/assets/assets/minecraft/optifine/cit/police_uniform/fbi_chestplate.properties
@@ -3,4 +3,11 @@ matchItems=chainmail_chestplate golden_chestplate iron_chestplate diamond_chestp
 
 texture=chainmail_layer_1
 
+texture.chainmail_layer_1=chainmail_layer_1
+texture.gold_layer_1=chainmail_layer_1
+texture.iron_layer_1=chainmail_layer_1
+texture.diamond_layer_1=chainmail_layer_1
+texture.netherite_layer_1=chainmail_layer_1
+texture.leather_layer_1=chainmail_layer_1
+
 nbt.display.Name=ipattern:\u041d\u0430\u0433\u0440\u0443\u0434\u043d\u0438\u043a SLPD
