--- a/assets/assets/minecraft/optifine/cit/postman_uniform/roba_boots.properties
+++ b/assets/assets/minecraft/optifine/cit/postman_uniform/roba_boots.properties
@@ -3,4 +3,11 @@ matchItems=iron_boots
 
 texture=roba_1
 
+texture.chainmail_layer_1=roba_1
+texture.gold_layer_1=roba_1
+texture.iron_layer_1=roba_1
+texture.diamond_layer_1=roba_1
+texture.netherite_layer_1=roba_1
+texture.leather_layer_1=roba_1
+
 nbt.display.Name=ipattern:\u0431\u043e\u0442\u0438\u043d\u043a\u0438 \u041f\u043e\u0447\u0442\u0430\u043b\u044c\u043e\u043d\u0430
