--- a/assets/assets/minecraft/optifine/cit/postman_uniform/roba_chestplate.properties
+++ b/assets/assets/minecraft/optifine/cit/postman_uniform/roba_chestplate.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=iron_chestplate
 texture=roba_1
+
+texture.chainmail_layer_1=roba_1
+texture.gold_layer_1=roba_1
+texture.iron_layer_1=roba_1
+texture.diamond_layer_1=roba_1
+texture.netherite_layer_1=roba_1
+texture.leather_layer_1=roba_1
 nbt.display.Name=ipattern:\u041d\u0430\u0433\u0440\u0443\u0434\u043d\u0438\u043a \u041f\u043e\u0447\u0442\u0430\u043b\u044c\u043e\u043d\u0430
