--- a/assets/assets/minecraft/optifine/cit/postman_uniform/roba_helmet.properties
+++ b/assets/assets/minecraft/optifine/cit/postman_uniform/roba_helmet.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=iron_helmet
 texture=roba_1
+
+texture.chainmail_layer_1=roba_1
+texture.gold_layer_1=roba_1
+texture.iron_layer_1=roba_1
+texture.diamond_layer_1=roba_1
+texture.netherite_layer_1=roba_1
+texture.leather_layer_1=roba_1
 nbt.display.Name=ipattern:\u0428\u043b\u0435\u043c \u041f\u043e\u0447\u0442\u0430\u043b\u044c\u043e\u043d\u0430
