--- a/assets/assets/minecraft/optifine/cit/quant/quant_boots.properties
+++ b/assets/assets/minecraft/optifine/cit/quant/quant_boots.properties
@@ -3,4 +3,11 @@ matchItems=chainmail_boots golden_boots iron_boots diamond_boots netherite_boots
 
 texture=quantum_1
 
+texture.chainmail_layer_1=quantum_1
+texture.gold_layer_1=quantum_1
+texture.iron_layer_1=quantum_1
+texture.diamond_layer_1=quantum_1
+texture.netherite_layer_1=quantum_1
+texture.leather_layer_1=quantum_1
+
 nbt.display.Name=ipattern:\u041a\u0432\u0430\u043d\u0442\u043e\u0432\u044b\u0435 \u0431\u043e\u0442\u0438\u043d\u043a\u0438
