--- a/assets/assets/minecraft/optifine/cit/quant/quant_chestplate.properties
+++ b/assets/assets/minecraft/optifine/cit/quant/quant_chestplate.properties
@@ -3,4 +3,11 @@ matchItems=chainmail_chestplate golden_chestplate iron_chestplate diamond_chestp
 
 texture=quantum_1
 
+texture.chainmail_layer_1=quantum_1
+texture.gold_layer_1=quantum_1
+texture.iron_layer_1=quantum_1
+texture.diamond_layer_1=quantum_1
+texture.netherite_layer_1=quantum_1
+texture.leather_layer_1=quantum_1
+
 nbt.display.Name=ipattern:\u041a\u0432\u0430\u043d\u0442\u043e\u0432\u044b\u0439 \u0436\u0438\u043b\u0435\u0442
