--- a/assets/assets/minecraft/optifine/cit/quant/quant_leggings.properties
+++ b/assets/assets/minecraft/optifine/cit/quant/quant_leggings.properties
@@ -3,4 +3,11 @@ matchItems=chainmail_leggings golden_leggings iron_leggings diamond_leggings net
 
 texture=quantum_2
 
+texture.chainmail_layer_2=quantum_2
+texture.gold_layer_2=quantum_2
+texture.iron_layer_2=quantum_2
+texture.diamond_layer_2=quantum_2
+texture.netherite_layer_2=quantum_2
+texture.leather_layer_2=quantum_2
+
 nbt.display.Name=ipattern:\u041a\u0432\u0430\u043d\u0442\u043e\u0432\u044b\u0435 \u043f\u043e\u043d\u043e\u0436\u0438
