--- a/assets/assets/minecraft/optifine/cit/quant_up/gravichestplate.properties
+++ b/assets/assets/minecraft/optifine/cit/quant_up/gravichestplate.properties
@@ -3,4 +3,11 @@ matchItems=chainmail_chestplate golden_chestplate iron_chestplate diamond_chestp
 
 texture=gravichestplate
 
+texture.chainmail_layer_1=gravichestplate
+texture.gold_layer_1=gravichestplate
+texture.iron_layer_1=gravichestplate
+texture.diamond_layer_1=gravichestplate
+texture.netherite_layer_1=gravichestplate
+texture.leather_layer_1=gravichestplate
+
 nbt.display.Name=ipattern:\u0413\u0440\u0430\u0432\u0438\u0442\u0430\u0446\u0438\u043e\u043d\u043d\u044b\u0439 \u043d\u0430\u0433\u0440\u0443\u0434\u043d\u0438\u043a
