--- a/assets/assets/minecraft/optifine/cit/samurai_sets/1/samurai_h.properties
+++ b/assets/assets/minecraft/optifine/cit/samurai_sets/1/samurai_h.properties
@@ -1,5 +1,12 @@
 type=armor
 matchItems=leather_helmet chainmail_helmet iron_helmet diamond_helmet golden_helmet netherite_helmet
 texture=diamond_layer_1
+
+texture.chainmail_layer_1=diamond_layer_1
+texture.gold_layer_1=diamond_layer_1
+texture.iron_layer_1=diamond_layer_1
+texture.diamond_layer_1=diamond_layer_1
+texture.netherite_layer_1=diamond_layer_1
+texture.leather_layer_1=diamond_layer_1
 nbt.display.Name=ipattern:\u0428\u043b\u0435\u043c \u0437\u043e\u043b\u043e\u0442\u043e\u0433\u043e \u0441\u0430\u043c\u0443\u0440\u0430\u044f
 #Шлем золотого самурая
