--- a/assets/assets/minecraft/optifine/cit/samurai_sets/3/samurai_b.properties
+++ b/assets/assets/minecraft/optifine/cit/samurai_sets/3/samurai_b.properties
@@ -1,5 +1,12 @@
 type=armor
 matchItems=leather_chestplate chainmail_chestplate iron_chestplate diamond_chestplate golden_chestplate netherite_chestplate
 texture=iron_layer_1
+
+texture.chainmail_layer_1=iron_layer_1
+texture.gold_layer_1=iron_layer_1
+texture.iron_layer_1=iron_layer_1
+texture.diamond_layer_1=iron_layer_1
+texture.netherite_layer_1=iron_layer_1
+texture.leather_layer_1=iron_layer_1
 nbt.display.Name=ipattern:\u041d\u0430\u0433\u0440\u0443\u0434\u043d\u0438\u043a \u0442\u0440\u0435\u043d\u0438\u0440\u043e\u0432\u043e\u0447\u043d\u043e\u0433\u043e \u0441\u0430\u043c\u0443\u0440\u0430\u044f
 #Нагрудник тренировочного самурая
