--- a/assets/assets/minecraft/optifine/cit/samurai_sets/3/samurai_h.properties
+++ b/assets/assets/minecraft/optifine/cit/samurai_sets/3/samurai_h.properties
@@ -1,5 +1,12 @@
 type=armor
 matchItems=leather_helmet chainmail_helmet iron_helmet diamond_helmet golden_helmet netherite_helmet
 texture=iron_layer_1
+
+texture.chainmail_layer_1=iron_layer_1
+texture.gold_layer_1=iron_layer_1
+texture.iron_layer_1=iron_layer_1
+texture.diamond_layer_1=iron_layer_1
+texture.netherite_layer_1=iron_layer_1
+texture.leather_layer_1=iron_layer_1
 nbt.display.Name=ipattern:\u0428\u043b\u0435\u043c \u0442\u0440\u0435\u043d\u0438\u0440\u043e\u0432\u043e\u0447\u043d\u043e\u0433\u043e \u0441\u0430\u043c\u0443\u0440\u0430\u044f
 #Шлем тренировочного самурая
