--- a/assets/assets/minecraft/optifine/cit/samurai_sets/3/samurai_n.properties
+++ b/assets/assets/minecraft/optifine/cit/samurai_sets/3/samurai_n.properties
@@ -1,5 +1,12 @@
 type=armor
 matchItems=leather_boots chainmail_boots iron_boots diamond_boots golden_boots netherite_boots
 texture=iron_layer_1
+
+texture.chainmail_layer_1=iron_layer_1
+texture.gold_layer_1=iron_layer_1
+texture.iron_layer_1=iron_layer_1
+texture.diamond_layer_1=iron_layer_1
+texture.netherite_layer_1=iron_layer_1
+texture.leather_layer_1=iron_layer_1
 nbt.display.Name=ipattern:\u0411\u043e\u0442\u0438\u043d\u043a\u0438 \u0442\u0440\u0435\u043d\u0438\u0440\u043e\u0432\u043e\u0447\u043d\u043e\u0433\u043e \u0441\u0430\u043c\u0443\u0440\u0430\u044f
 #Ботинки тренировочного самурая
