--- a/assets/assets/minecraft/optifine/cit/samurai_sets/4/samurai_b.properties
+++ b/assets/assets/minecraft/optifine/cit/samurai_sets/4/samurai_b.properties
@@ -1,5 +1,12 @@
 type=armor
 matchItems=leather_chestplate chainmail_chestplate iron_chestplate diamond_chestplate golden_chestplate netherite_chestplate
 texture=top
+
+texture.chainmail_layer_1=top
+texture.gold_layer_1=top
+texture.iron_layer_1=top
+texture.diamond_layer_1=top
+texture.netherite_layer_1=top
+texture.leather_layer_1=top
 nbt.display.Name=ipattern:\u041d\u0430\u0433\u0440\u0443\u0434\u043d\u0438\u043a \u044f\u043a\u0443\u0434\u0437\u044b \u0441\u0430\u043c\u0443\u0440\u0430\u044f
 #Нагрудник якудзы самурая
