--- a/assets/assets/minecraft/optifine/cit/witcher_set/vedmak_b.properties
+++ b/assets/assets/minecraft/optifine/cit/witcher_set/vedmak_b.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=leather_chestplate chainmail_chestplate iron_chestplate diamond_chestplate golden_chestplate netherite_chestplate
 texture=vedmak
+
+texture.chainmail_layer_1=vedmak
+texture.gold_layer_1=vedmak
+texture.iron_layer_1=vedmak
+texture.diamond_layer_1=vedmak
+texture.netherite_layer_1=vedmak
+texture.leather_layer_1=vedmak
 nbt.display.Name=ipattern:\u041d\u0430\u0433\u0440\u0443\u0434\u043d\u0438\u043a \u0432\u0435\u0434\u044c\u043c\u0430\u043a\u0430
