--- a/assets/assets/minecraft/optifine/cit/witcher_set/vedmak_h.properties
+++ b/assets/assets/minecraft/optifine/cit/witcher_set/vedmak_h.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=leather_helmet chainmail_helmet iron_helmet diamond_helmet golden_helmet netherite_helmet
 texture=vedmak
+
+texture.chainmail_layer_1=vedmak
+texture.gold_layer_1=vedmak
+texture.iron_layer_1=vedmak
+texture.diamond_layer_1=vedmak
+texture.netherite_layer_1=vedmak
+texture.leather_layer_1=vedmak
 nbt.display.Name=ipattern:\u0428\u043b\u0435\u043c \u0432\u0435\u0434\u044c\u043c\u0430\u043a\u0430
