--- a/assets/assets/minecraft/optifine/cit/witcher_set/vedmak_n.properties
+++ b/assets/assets/minecraft/optifine/cit/witcher_set/vedmak_n.properties
@@ -1,4 +1,11 @@
 type=armor
 matchItems=leather_boots chainmail_boots iron_boots diamond_boots golden_boots netherite_boots
 texture=vedmak
+
+texture.chainmail_layer_1=vedmak
+texture.gold_layer_1=vedmak
+texture.iron_layer_1=vedmak
+texture.diamond_layer_1=vedmak
+texture.netherite_layer_1=vedmak
+texture.leather_layer_1=vedmak
 nbt.display.Name=ipattern:\u0411\u043e\u0442\u0438\u043d\u043a\u0438 \u0432\u0435\u0434\u044c\u043c\u0430\u043a\u0430
